# open-ui

./: .clang-format  .gitignore  .gn  BUILD.gn  BUILDCONFIG.gn  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
bindings/rust/: Cargo.toml
bindings/rust/.cargo/: config.toml
bindings/rust/examples/counter/: Cargo.toml
bindings/rust/examples/counter/src/: main.rs
bindings/rust/examples/dashboard/: Cargo.toml
bindings/rust/examples/dashboard/src/: main.rs
bindings/rust/examples/hello/: Cargo.toml
bindings/rust/examples/hello/src/: main.rs
bindings/rust/examples/todo/: Cargo.toml  build.rs
bindings/rust/examples/todo/src/: main.rs
bindings/rust/openui/: Cargo.toml  build.rs
bindings/rust/openui-build/: Cargo.toml  chromium_rust_stubs.c
bindings/rust/openui-build/src/: lib.rs
bindings/rust/openui-dom/: Cargo.toml
bindings/rust/openui-dom/src/: lib.rs  tree.rs
bindings/rust/openui-geometry/: Cargo.toml
bindings/rust/openui-geometry/src/: bfc_offset.rs  box_strut.rs  layout_unit.rs  length.rs  lib.rs  logical_offset.rs  logical_rect.rs  logical_size.rs  margin_strut.rs  min_max_sizes.rs  physical_offset.rs  physical_rect.rs  physical_size.rs  writing_mode.rs
bindings/rust/openui-layout/: Cargo.toml
bindings/rust/openui-layout/src/: bfc_resolution.rs  block.rs  constraint_space.rs  css_sizing.rs  fragment.rs  inflow_position.rs  intrinsic_sizing.rs  layout_result.rs  length_resolver.rs  lib.rs  margin_collapsing.rs  new_formatting_context.rs  out_of_flow.rs  relative.rs  size_constraints.rs  sticky.rs
bindings/rust/openui-layout/src/exclusions/: exclusion_space.rs  float_utils.rs  mod.rs
bindings/rust/openui-layout/src/flex/: algorithm.rs  alignment.rs  intrinsic.rs  item.rs  line.rs  line_breaker.rs  line_flexer.rs  mod.rs
bindings/rust/openui-layout/src/fragmentation/: mod.rs
bindings/rust/openui-layout/src/inline/: algorithm.rs  items.rs  items_builder.rs  line_breaker.rs  line_info.rs  mod.rs  text_combine.rs
bindings/rust/openui-layout/src/multicol/: mod.rs
bindings/rust/openui-layout/src/ruby/: layout.rs  mod.rs
bindings/rust/openui-layout/tests/: advanced_text_tests.rs  edge_case_tests.rs  flex_alignment.rs  flex_direction_wrap.rs  flex_edge_cases.rs  flex_grow_shrink.rs  flex_wpt_spec.rs  inline_items_tests.rs  inline_layout_advanced_tests.rs  inline_layout_tests.rs  line_break_property_tests.rs  line_breaking_advanced_tests.rs  line_breaking_tests.rs  sp11_round12_fix_tests.rs  sp11_round16_fix_tests.rs  sp11_round19_fix_tests.rs  sp11_round20_fix_tests.rs  sp11_round21_fix_tests.rs  sp11_round22_fix_tests.rs  sp11_round23_fix_tests.rs  sp11_round24_fix_tests.rs  sp11_round28_fix_tests.rs  sp11_round2_fix_tests.rs  sp11_round3_fix_tests.rs  sp11_round4_fix_tests.rs  sp11_round7_fix_tests.rs  sp11_round8_fix_tests.rs  sp11_round9_fix_tests.rs  sp12_abspos_tests.rs  sp12_bfc_resolution_tests.rs  sp12_css_sizing_tests.rs  sp12_float_integration_tests.rs  sp12_fragmentation_tests.rs  sp12_h2_core_block_tests.rs  sp12_h3_float_tests.rs  sp12_h4_margin_tests.rs  sp12_h5_position_tests.rs  sp12_h6_sizing_tests.rs  sp12_h7_overflow_tests.rs  sp12_h8_frag_tests.rs  (+13 more)
bindings/rust/openui-macros/: Cargo.toml
bindings/rust/openui-macros/src/: component.rs  lib.rs  view.rs
bindings/rust/openui-paint/: Cargo.toml
bindings/rust/openui-paint/src/: decoration_painter.rs  emphasis_painter.rs  lib.rs  painter.rs  render.rs  text_painter.rs
bindings/rust/openui-paint/tests/: decoration_tests.rs  pixel_comparison_tests.rs  skip_ink_tests.rs  sp11_decoration_phase_tests.rs  sp11_round12_decoration_tests.rs  sp11_round22_border_tests.rs  sp11_round23_border_tests.rs  sp11_round24_border_tests.rs  sp11_round27_decoration_tests.rs  sp11_round30_decoration_tests.rs  sp11_round7_overflow_tests.rs  sp11_round8_overflow_tests.rs  sp12_i1_block_pixel_tests.rs  sp12_i2_float_pixel_tests.rs  sp12_i3_position_pixel_tests.rs  sp12_i4_overflow_pixel_tests.rs  sp12_overflow_clip_tests.rs  text_paint_tests.rs  wpt_decoration_tests.rs
bindings/rust/openui-style/: Cargo.toml
bindings/rust/openui-style/src/: color.rs  computed.rs  enums.rs  font_types.rs  lib.rs
bindings/rust/openui-sys/: Cargo.toml  build.rs
bindings/rust/openui-sys/src/: lib.rs
bindings/rust/openui-text/: Cargo.toml
bindings/rust/openui-text/src/: char_orientation.rs  emoji.rs  emphasis.rs  lib.rs  transform.rs
bindings/rust/openui-text/src/bidi/: mod.rs  paragraph.rs
bindings/rust/openui-text/src/font/: cache.rs  description.rs  fallback.rs  features.rs  font.rs  metrics.rs  mod.rs  platform.rs
bindings/rust/openui-text/src/hyphenation/: mod.rs  patterns.rs  trie.rs
bindings/rust/openui-text/src/shaping/: mod.rs  segmenter.rs  shape_result.rs  shaper.rs
bindings/rust/openui-text/tests/: bidi_integration_tests.rs  bidi_tests.rs  font_edge_cases_tests.rs  font_tests.rs  font_variant_tests.rs  locale_case_tests.rs  shaping_advanced_tests.rs  shaping_tests.rs  sp11_round21_fix_tests.rs  sp11_round22_fix_tests.rs  sp11_round23_fix_tests.rs  sp11_round24_fix_tests.rs  sp11_round27_fix_tests.rs  sp11_round28_fix_tests.rs  sp11_round29_fix_tests.rs  sp11_round30_fix_tests.rs  transform_tests.rs  wpt_font_tests.rs
bindings/rust/openui/src/: app.rs  context.rs  document.rs  effect.rs  element.rs  events.rs  lib.rs  prelude.rs  renderer.rs  runtime.rs  scope.rs  signal.rs  style.rs  tests.rs  text_node.rs  view_node.rs
examples/skia_poc/: BUILD.gn  chromium_build.gn  main.cc
src/api/: BUILD.gn  openui.h  openui_api_test.cc  openui_c_render_test.c  openui_c_test.c  openui_element_factory.cc  openui_element_factory.h  openui_events.cc  openui_events.h  openui_impl.cc  openui_impl.h  openui_init.cc  openui_init.h  openui_pixel_diff.cc  openui_pixel_diff.h  openui_render.cc  openui_render.h  openui_render_pages.cc  openui_render_test.cc  openui_resource_provider.cc  openui_resource_provider.h
src/rendering_pipeline/chromium/: BUILD.gn  rendering_test.cc  smoke_test.cc
tests/pixel_apps/rust/: Cargo.toml
tests/pixel_apps/rust/src/: framework.rs  main.rs
(+146 files in other folders)
