[workspace]
resolver = "2"
members = [
    "openui-geometry",
    "openui-style",
    "openui-dom",
    "openui-layout",
    "openui-paint",
    "openui-sys",
    "openui",
    "openui-macros",
    "openui-build",
    "examples/hello",
    "examples/counter",
    "examples/todo",
    "examples/dashboard",
]
